--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-monaco-editor": "^0.56.2",
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1"
