--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,19 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+/node_modules
+/frontend/node_modules
+/backend/node_modules
+/backend/public
 dist
+backend/public
 dist-ssr
 *.local
 .env
 logs
 log.txt
 server.log
-
+.env
 
 
 
