--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"start": "node src/server.js",
-		"dev": "nodemon src/server.js",
+		"dev": "set NODE_ENV=development&nodemon src/server.js",
+		"server:prod": "set NODE_ENV=production&node src/server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
